fix word wrap on list items

--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,9 @@
 }
 
 .ListItem {
+  word-wrap: break-word;
   padding-left: 25;
+  padding-right: 25;
   border-radius: 6px;
   text-align: right;
   color: rgb(14, 105, 185);
@@ -37,8 +39,9 @@
 }
 
 .ListItem:hover{
+  word-wrap: break-word;
   background-color: rgb(14, 105, 185);
-  color: rgb(217, 229, 238);
+  color: white;
   transform: scale(1.05);
 }
 
